tests/NormalTests/paczka1/fuzzy1/37296442.err
Error in line 7: h1r A418 7,4
Error in line 9: h1r A300 63,3
Error in line 24: JmSvR94gy A41 202,2
Error in line 13: JmSvR94gy A418 40,6
